--- a/FinalProject/res/layout/activity_game.xml
+++ b/FinalProject/res/layout/activity_game.xml
@@ -53,24 +53,24 @@
         android:id="@+id/pointsDisplay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:baselineAligned="false" >
+        android:baselineAligned="false"
+        android:orientation="horizontal" >
 
         <RelativeLayout
             android:id="@+id/multiplier"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="10dp"
-            android:background="@color/lightblue" >
+            android:background="@color/lightblue"
+            android:padding="10dp" >
 
             <TextView
                 android:id="@+id/multiplierLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/white"
-                android:text="@string/multiplier" />
+                android:text="@string/multiplier"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/multiplierTextView"
@@ -78,8 +78,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/multiplierLabel"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/white"
-                android:text="@string/startMultiplier" />
+                android:text="@string/startMultiplier"
+                android:textColor="@color/white" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -87,16 +87,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="10dp"
-            android:background="@color/orange" >
+            android:background="@color/orange"
+            android:padding="10dp" >
 
             <TextView
                 android:id="@+id/scoreLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/white"
-                android:text="@string/score" />
+                android:text="@string/score"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/scoreTextView"
@@ -104,8 +104,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/scoreLabel"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/white"
-                android:text="@string/startScore" />
+                android:text="@string/startScore"
+                android:textColor="@color/white" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -113,48 +113,44 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="10dp"
-            android:background="@color/green" >
+            android:background="@color/green"
+            android:padding="10dp" >
 
             <TextView
                 android:id="@+id/streakLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/white"
-                android:text="@string/streak" />
-            
+                android:text="@string/streak"
+                android:textColor="@color/white" />
+
             <TextView
                 android:id="@+id/streakTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/streakLabel"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/white"
-                android:text="@string/startStreak" />
-
-         
-
+                android:text="@string/startStreak"
+                android:textColor="@color/white" />
         </RelativeLayout>
     </LinearLayout>
 
     <RelativeLayout
-        	android:id="@+id/timer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:background="@color/lightblue"
-             >
-    <ProgressBar
-        android:id="@+id/timerBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
+        android:id="@+id/timer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-     />
+        android:layout_alignParentBottom="true"
+        android:background="@color/lightblue"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp" >
+
+        <ProgressBar
+            android:id="@+id/timerBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
     </RelativeLayout>
 
 </RelativeLayout>
