--- a/FinalProject/res/layout/activity_main.xml
+++ b/FinalProject/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     tools:context="com.example.finalproject.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    
-        <TextView
+    <TextView
         android:id="@+id/nameString"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,22 +15,22 @@
         android:layout_marginTop="16dp"
         android:text="@string/app_name"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-    
+
     <TextView
         android:id="@+id/difficultyString"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="139dp"
+        android:layout_marginTop="100dp"
         android:text="@string/difficulty" />
     
     <Spinner
         android:id="@+id/difficultySpinner"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/difficultyString" />
+        android:layout_below="@+id/difficultyString"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/gameTypeString"
@@ -41,12 +40,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:text="@string/gameType" />
-    
+
     <Spinner
         android:id="@+id/gameTypeSpinner"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true" 
         android:layout_below="@id/gameTypeString" />
 
     <Button
@@ -56,5 +55,7 @@
         android:layout_below="@+id/gameTypeSpinner"
         android:layout_centerHorizontal="true"
         android:text="@string/go" />
+
+    
 
 </RelativeLayout>
