--- a/FinalProject/res/layout/activity_main.xml
+++ b/FinalProject/res/layout/activity_main.xml
@@ -6,15 +6,16 @@
     tools:context="com.example.finalproject.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-    <TextView
-        android:id="@+id/nameString"
+    <ImageView
+        android:id="@+id/logoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="@string/app_name"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/app_name"
+        android:padding="10dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/quizzie_logo" />
 
     <TextView
         android:id="@+id/difficultyString"
@@ -23,13 +24,22 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:text="@string/difficulty" />
-    
+        android:text="@string/difficulty"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <View
+        android:id="@+id/difficultyRule"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/difficultyString"
+        android:layout_margin="3dp"
+        android:background="@android:color/darker_gray" />
+
     <Spinner
         android:id="@+id/difficultySpinner"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/difficultyString"
+        android:layout_below="@+id/difficultyRule"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -39,23 +49,46 @@
         android:layout_below="@+id/difficultySpinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:text="@string/gameType" />
+        android:text="@string/gameType"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <View
+        android:id="@+id/gameTypeRule"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/gameTypeString"
+        android:layout_margin="3dp"
+        android:background="@android:color/darker_gray" />
 
     <Spinner
         android:id="@+id/gameTypeSpinner"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" 
-        android:layout_below="@id/gameTypeString" />
+        android:layout_below="@id/gameTypeRule"
+        android:layout_centerHorizontal="true" />
 
-    <Button
+    <TextView
         android:id="@+id/goButton"
-        android:layout_width="wrap_content"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gameTypeSpinner"
         android:layout_centerHorizontal="true"
-        android:text="@string/go" />
-
+        android:layout_marginTop="15dp"
+        android:background="@color/lightblue"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="@string/go"
+        android:textColor="@color/white" />
     
+        <TextView
+        android:id="@+id/legalText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:text="@string/legalText" />
 
 </RelativeLayout>
